# agentwatch

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
assets/: logo-mini.txt  logo-symbol.txt  logo.txt
crates/agentwatch-adapters/: Cargo.toml
crates/agentwatch-adapters/src/: claude_code.rs  claude_desktop.rs  codex_cli.rs  cursor.rs  gemini_cli.rs  lib.rs  opencode.rs  windsurf.rs
crates/agentwatch-cli/: Cargo.toml
crates/agentwatch-cli/src/: main.rs
crates/agentwatch-core/: Cargo.toml
crates/agentwatch-core/data/: pricing-meta.json  pricing.json
crates/agentwatch-core/src/: event.rs  lib.rs  money.rs  paths.rs  plan_detect.rs  pricing.rs
crates/agentwatch-demo/: Cargo.toml
crates/agentwatch-demo/src/: lib.rs
crates/agentwatch-proxy/: Cargo.toml
crates/agentwatch-proxy/src/: lib.rs
crates/agentwatch-store/: Cargo.toml
crates/agentwatch-store/src/: lib.rs  pid_lock.rs  queries.rs  reader.rs  schema.rs  writer.rs
crates/agentwatch-summary/: Cargo.toml
crates/agentwatch-summary/src/: lib.rs
crates/agentwatch-tui/: Cargo.toml
crates/agentwatch-tui/src/: app.rs  lib.rs  live_signal.rs  panes.rs  render.rs  runway.rs  watch.rs
crates/agentwatch-tui/src/panes/: activity.rs  agents.rs  badges.rs  cost.rs  files.rs
crates/agentwatch-web/: Cargo.toml
crates/agentwatch-web/assets/: index.html
crates/agentwatch-web/src/: assets.rs  lib.rs  routes.rs
scripts/: banner2svg.py  img2blocks.py
vhs/: README.md  demo.tape
