[package]
name = "agentwatch-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Per-agent parsers that produce AgentEvents from local log files."

[dependencies]
agentwatch-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
directories-next = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
