[package]
name = "agentwatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types for agentwatch: AgentEvent, Microcents, pricing."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories-next = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
