[package]
name = "agentwatch-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
description = "Live terminal HUD for agentwatch."

[dependencies]
agentwatch-core = { workspace = true }
agentwatch-store = { workspace = true }
agentwatch-adapters = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
